# semantic_matcher

./: .gitignore  20260318-refactoring-phase2-complete.md  20260318-refactoring-verification-summary.md  BENCHMARK_ORGANIZATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  config.yaml  hello.py  pyproject.toml  setup.py
.github/workflows/: lint.yml  publish.yml  test.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
data/: country_training_data.csv
data/processed/currencies/: currencies.csv
data/processed/industries/: industries_naics.csv  industries_sic.csv
data/processed/languages/: languages.csv
data/processed/occupations/: occupations.csv
data/processed/products/: products_mcc.csv  products_unspsc.csv
data/processed/timezones/: timezones.csv
data/processed/universities/: universities.csv
data/raw/currencies/: currencies.csv
data/raw/industries/: naics_2022.json  sic_titles.csv
data/raw/languages/: languages.csv
data/raw/occupations/: occupation_data.txt
data/raw/universities/: universities.json
docs/: 20260225-alternative-methods-roadmap.md  20260228-examples-fixes-report.md  20260228-verification-report.md  architecture.md  async-guide.md  benchmarking.md  bert-classifier.md  classifier-routes-comparison.md  configuration.md  country-classifier-scripts.md  examples.md  index.md  matcher-modes.md  models.md  notebooks.md  novel-class-detection.md  novelty-methods-research.md  pypi-trusted-publishing.md  quickstart.md  related-work.md  roadmap.md  static-embeddings.md  testing.md  troubleshooting.md
docs/architecture/: hierarchical-matching.md
docs/archive/plans/: 2026-03-04-hierarchical-entity-categorization-design.md  2026-03-04-hierarchical-entity-categorization.md
docs/archive/reports/: 20260228-examples-fixes-report.md  20260228-verification-report.md
docs/archive/research/: 20260225-alternative-methods-roadmap.md
docs/experiments/: benchmark-results.md  benchmarking.md  country-classifier-scripts.md  index.md  speed-benchmark-results.md
docs/implementation/: 2026-03-26-mypy-fixes.md
docs/plans/: 2026-03-04-hierarchical-entity-categorization.md
docs/superpowers/plans/: 2025-03-14-async-api.md
examples/: README.md  async_examples.py  basic_usage.py  batch_processing.py  country_matching.py  custom_backend.py  embedding_matcher_demo.py  entity_matcher_demo.py  hybrid_matching_demo.py  matcher_comparison.py  model_persistence.py  novel_discovery_example.py  oneclass_training_example.py  pattern_strategy_example.py  prototypical_training_example.py  setfit_novelty_training_example.py  threshold_tuning.py  zero_shot_classification.py
examples/current/: basic_matcher.py  hierarchical_matching.py  trained_matcher.py
experiments/: README.md
experiments/country_classifier/: country_classifier.py  country_classifier_advanced.py  country_classifier_quick.py
notebook/: country_classifier.py  country_classifier_advanced.py  country_classifier_quick.py
notebooks/: README.md  country_classifier.py  country_classifier_advanced.py  country_classifier_quick.py  dev101.ipynb  geograpy.ipynb  qwen_embedding.ipynb
scripts/: benchmark_async.py  benchmark_bert.py  benchmark_bert_models.py  benchmark_embeddings.py  render_benchmark_report.py  setup_llm.sh  visualize_benchmarks.py
semanticmatcher/: __init__.py  config.py
semanticmatcher/backends/: __init__.py  base.py  reranker_st.py  sentencetranformer.py
semanticmatcher/core/: matcher.py  monitoring.py  normalizer.py
semanticmatcher/utils/: benchmarks.py  preprocessing.py  validation.py
src/ingestion/: base.py  cli.py  currencies.py  industries.py  languages.py  occupations.py  products.py  timezones.py  universities.py
src/novelentitymatcher/: __init__.py  config.py  config_registry.py  exceptions.py
src/novelentitymatcher/backends/: __init__.py  base.py  reranker_st.py  static_embedding.py
src/novelentitymatcher/benchmarks/: __init__.py  cli.py  loader.py
src/novelentitymatcher/core/: async_utils.py  bert_classifier.py  classifier.py  embedding_matcher.py  hierarchy.py  hybrid.py  matcher.py  reranker.py
src/novelentitymatcher/ingestion/: __init__.py  base.py  cli.py  currencies.py  industries.py  languages.py  occupations.py  products.py
src/novelentitymatcher/novelty/: __init__.py  entity_matcher.py  match_result.py
src/novelentitymatcher/pipeline/: __init__.py  adapters.py  contracts.py  discovery.py  match_result.py  orchestrator.py
src/novelentitymatcher/utils/: benchmark_dataset.py  benchmark_reporting.py  embeddings.py  logging_config.py  validation.py
src/semanticmatcher/: __init__.py  config.py  exceptions.py
src/semanticmatcher/backends/: __init__.py  litellm.py  reranker_st.py  sentencetransformer.py
src/semanticmatcher/benchmarks/: __init__.py  base.py  cli.py  loader.py  novel_entity_matcher.py  registry.py  runner.py
src/semanticmatcher/core/: async_utils.py  bert_classifier.py  hybrid.py  (+9 more)
tests/: conftest.py  test_ann_index.py  test_config.py  test_discovery_pipeline.py  test_discovery_pipeline_extended.py  test_integration.py  test_integration_extended.py  test_llm_proposer.py  test_novel_entity_matcher.py  test_novelty_detector.py  test_novelty_detector_lifecycle.py  test_oneclass_strategy.py  test_packaging.py  test_pattern_strategy.py  test_persistence.py  test_pipeline_contracts.py  test_pipeline_orchestrator.py  test_prototypical_strategy.py  test_review_manager.py  test_schema_validation.py  test_setfit_novelty.py  test_signal_combiner.py
tests/core/: test_hierarchy.py
tests/test_backends/: test_backend_imports.py  test_huggingface.py  test_reranker_contracts.py  test_static_embedding.py
tests/test_core/: test_async_matcher.py  test_async_utils.py  test_bert_classifier.py  test_classifier.py  test_matcher.py  test_normalizer.py
tests/test_ingestion/: test_cli.py  test_timezones.py
tests/test_utils/: test_benchmarks.py  test_embeddings.py  test_logging_config.py  test_preprocessing.py  test_validation.py
(+104 files in other folders)
