[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "semantic-matcher"
version = "0.1.0"
description = "Text-to-entity matching with SetFit few-shot learning"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "minghao", email = "howt51@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["semantic", "matching", "entity", "embedding", "setfit", "text", "nlp"]
urls = { repository = "https://github.com/anomalyco/semantic_matcher" }

dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=3.0.0",
    "setfit>=1.0.0",
    "datasets>=2.14.0",
    "torch>=2.0.0",
    "nltk>=3.9.2",
    "requests>=2.31.0",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.0.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
semanticmatcher-ingest = "semanticmatcher.ingestion.cli:main"

[project.optional-dependencies]
dev = [
    "beautifulsoup4>=4.14.3",
    "black>=23.0.0",
    "build>=1.2.2",
    "html-to-markdown>=1.8.0",
    "patchright>=1.58.0",
    "pytest>=8.4.2",
    "ruff>=0.1.0",
    "twine>=5.1.1",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.3",
    "black>=23.0.0",
    "build>=1.2.2",
    "html-to-markdown>=1.8.0",
    "patchright>=1.58.0",
    "pytest>=8.4.2",
    "ruff>=0.1.0",
    "twine>=5.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/semanticmatcher"]

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that depend on external services or network access",
    "slow: tests that are expensive to run in default CI",
    "hf: Hugging Face model-backed tests",
]
